Fixed and generalized cotmatrix, write .mesh file, cat like matlab's cat
Former-commit-id: 7e5b490a5864fda38e071b106db729b48f607b46

--- a/matlab-to-eigen.html
+++ b/matlab-to-eigen.html
@@ -227,6 +227,12 @@ tr.gotcha2 td
         <td></td>
       </tr>
 
+      <tr class=d1>
+        <td><pre><code>M = mode(X,dim)</code></pre></td>
+        <td><pre><code>igl::mode(X,dim,M)</code></pre></td>
+        <td></td>
+      </tr>
+
       <!-- Insert rows for each command pair -->
 
       <!-- Leave this here for copy and pasting
