--- a/matlab-to-eigen.html
+++ b/matlab-to-eigen.html
@@ -233,6 +233,12 @@ tr.gotcha2 td
         <td></td>
       </tr>
 
+      <tr class=d0>
+        <td><pre><code>A = arrayfun(FUN, B)</code></pre></td>
+        <td><pre><code>B = A.unaryExpr(ptr_fun(FUN))</code></pre></td>
+        <td>If FUN is templated, the templates must be fully resolved.</td>
+      </tr>
+
       <!-- Insert rows for each command pair -->
 
       <!-- Leave this here for copy and pasting
