fixed verbose and merged

--- a/tutorial.html
+++ b/tutorial.html
@@ -46,7 +46,8 @@
         project to use the static library for most functionality from IGL, but then
         include a certain IGL function as an inlined function. This may be achieved
         by surrounding the relevant include with a define and undefine of the
-        <code>IGL_HEADER_ONLY</code> macro. Like so:
+        <code>IGL_HEADER_ONLY</code> macro. Here's an example of the little
+        widget:
       </p>
       <pre><code>
 ...
