fixed bug in render to tga

--- a/matlab-to-eigen.html
+++ b/matlab-to-eigen.html
@@ -110,7 +110,7 @@
       </tr>
 
       <tr class=d1>
-        <td><pre><code>A(B == 0) = C</code></pre></td>
+        <td><pre><code>A(B == 0) = C(B==0)</code></pre></td>
         <td><pre><code>A = (B == 0).select(C,A)</code></pre></td>
         <td></td>
       </tr>
