--- a/file-formats/index.html
+++ b/file-formats/index.html
@@ -11,7 +11,13 @@
     <li><a href="./bf.html">.bf</a> ASCII files for representing skeletal bone "forests"</li>
     <li><a href="./tgf.html">.tgf</a> ASCII files for representing control handle graphs</li>
     <li><a href="http://tetgen.berlios.de/fformats.off.html">.off</a> Geomview's polyhedral file format</li>
+    <li><a href="http://en.wikipedia.org/wiki/Wavefront_.obj_file#File_format">.obj</a> Wavefront object file format. Usually unsafe to assume anything more than vertex positions and triangle indices are supported</li>
     <li><a href="http://www.ann.jussieu.fr/frey/publications/RT-0253.pdf#page=33">.mesh</a> Medit's triangle surface mesh + tetrahedral volume mesh file format, see page 33, section 7.2.1</li>
+    <li><i>.poly</i> Piecewise-linear complex. This format comes in many similar but importantly different flavors: 
+      <a href="https://www.cs.cmu.edu/~quake/triangle.poly.html">triangle's</a>, <a href="http://tetgen.berlios.de/fformats.poly.html">tetgen's</a>, <a href="http://sparse-meshing.com/svr/0.2.1/format-poly.html">pyramid/SVR's</a></li>
+    <li><a href=? class=missing>.node</a></li>
+    <li><a href=? class=missing>.ele</a></li>
+    <li><a href=? class=missing>.face</a></li>
   </ul>
   </body>
 </html>
