more documentation, fixed bug in reanttweakbar
Former-commit-id: 85afd134fe16f83b3a0cd1d332a1fc3481b8eddd

--- a/tutorial.html
+++ b/tutorial.html
@@ -244,5 +244,6 @@ make
         href="matlab-to-eigen.html">Our own translation table</a> shows a list
         of common matlab functions and their igl-eigen equivalents.  
       </p>
+      <p>See also: <a href=style_guidelines.html>style guidlines</a></p>
   </body>
 </html>
