clean up some headers, auto doc and todos
Former-commit-id: 884d25f8467c84bb4caa47e0fb1a5d33a3d3c792

--- a/style_guidelines.html
+++ b/style_guidelines.html
@@ -1,15 +1,15 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>IGL LIB - Style Guidelines</title>
+    <title>libigl - Style Guidelines</title>
     <link href="./style.css" rel="stylesheet" type="text/css">
-  <body>
-    <img src=http://igl.ethz.ch/includes/images/logo-igl.gif alt="igl logo"
-    class=center>
-    <h1>igl_lib Style Guidelines</h1>
+  <body class=article_body>
+  <div class=article>
+    <a href=.><img src=libigl-logo.jpg alt="igl logo" class=center></a>
+    <h1>libigl Style Guidelines</h1>
     <p>
 This library is shared by many people. This document highlights some style
-guidelines for <i>developers</i> of the igl library.
+guidelines for <i>developers</i> of the <a href=.>libigl</a> library.
    </p>
    <p>
 Each function prototype should be well documented.  Write a summary of what
@@ -185,6 +185,7 @@ and outputs.
       </tr>
     </table>
 
-    <p>See also: <a href=tutorial.html>tutorial</a></p>
+    <p>See also: <a href=tutorial.html>tutorial</a>, <a href=doc.html>auto-documentation</a></p>
+  </div>
   </body>
 </html>
