--- a/tutorial.html
+++ b/tutorial.html
@@ -1,14 +1,14 @@
 <html>
   <head>
-    <title>igl_lib tutorial</title>
+    <title>libigl developer tutorial</title>
     <link href="./style.css" rel="stylesheet" type="text/css">
   </head>
-  <body>
-    <img src=http://igl.ethz.ch/includes/images/logo-igl.gif alt="igl logo"
-    class=center>
-    <h1>Using the IGL library</h1>
+  <body class=article_body>
+    <div class=article>
+    <a href=.><img src=libigl-logo.jpg alt="igl logo" class=center></a>
+    <h1>Using the libigl library</h1>
     <p>
-      The igl lib is a collection of useful/reusable/sharable C++ functions
+      The <a href=.>libigl</a> library is a collection of useful/reusable/sharable C++ functions
       with very few external <a href="#dependencies">dependencies</a>. The
       library may be used as a <a href="#header_library">"headers only"
       library</a> or a <a href=#static_library>statically linked library</a>.
@@ -244,6 +244,7 @@ make
         href="matlab-to-eigen.html">Our own translation table</a> shows a list
         of common matlab functions and their igl-eigen equivalents.  
       </p>
-      <p>See also: <a href=style_guidelines.html>style guidlines</a></p>
+      <p>See also: <a href=style_guidelines.html>style guidlines</a>, <a href=doc.html>auto-documentation</a></p>
+  </div>
   </body>
 </html>
